// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksTable rendering should render when loading 1`] = `
<Component
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={false}
  hasError={false}
  isLoading={true}
  itemCount={0}
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  perPage={42}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toasts={Array []}
/>
`;

exports[`WebhooksTable rendering should render with error 1`] = `
<Component
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={false}
  hasError={true}
  isLoading={false}
  itemCount={0}
  message={
    Object {
      "text": "this is error",
      "type": "error",
    }
  }
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  perPage={42}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toasts={Array []}
/>
`;

exports[`WebhooksTable rendering should render with no data 1`] = `
<Component
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={false}
  hasError={false}
  isLoading={false}
  itemCount={0}
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  perPage={42}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toasts={Array []}
/>
`;

exports[`WebhooksTable rendering should render with webhooks 1`] = `
<Component
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={true}
  hasError={false}
  isLoading={false}
  itemCount={2}
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  perPage={42}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toasts={Array []}
  webhooks={
    Array [
      Object {
        "canDelete": true,
        "canEdit": true,
        "enabled": true,
        "id": 1,
        "name": "my-webhook",
        "targetUrl": "https://my-machine.example.com",
      },
      Object {
        "canDelete": false,
        "canEdit": false,
        "enabled": false,
        "id": 2,
        "name": "your-webhook",
        "targetUrl": "https://your-machine.example.com",
      },
    ]
  }
/>
`;
